--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.17.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
     "next": "^14.2.4",
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@types/eslint": "^8.56.10",
     "@types/next-auth": "^3.15.0",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -41,7 +41,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.5.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.36.2"
