--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "resolveJsonModule": true,
     "moduleDetection": "force",
     "isolatedModules": true,
-
+    
     /* Strictness */
     "strict": true,
     "noUncheckedIndexedAccess": true,
@@ -18,7 +18,7 @@
     "lib": ["dom", "dom.iterable", "ES2022"],
     "noEmit": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "Node",
     "jsx": "preserve",
     "plugins": [{ "name": "next" }],
     "incremental": true,
@@ -28,7 +28,9 @@
     "paths": {
       "~/*": ["./src/*"]
     }
-  },
+  },"ts-node": {
+    "esm": true
+},
   "include": [
     ".eslintrc.cjs",
     "next-env.d.ts",
