--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@prisma/client": "^5.18.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "geist": "^1.3.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
-    "openai": "^4.54.0",
+    "openai": "^4.55.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.3"
