--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:audio": "prisma audio",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/client-polly": "^3.624.0",
     "@heroicons/react": "^2.1.5",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.18.0",
