--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.18.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "geist": "^1.3.0",
