--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "dotenv": "^16.4.5",
     "geist": "^1.3.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "^14.2.4",
+    "next": "14.3.0-canary.59",
     "next-auth": "^4.24.7",
     "openai": "^4.55.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-beta-4508873393-20240430",
+    "react-dom": "19.0.0-beta-4508873393-20240430",
     "zod": "^3.23.3"
   },
   "devDependencies": {
