--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.18.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^6.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
@@ -31,6 +32,7 @@
     "openai": "^4.55.1",
     "react": "19.0.0-beta-4508873393-20240430",
     "react-dom": "19.0.0-beta-4508873393-20240430",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.3"
   },
   "devDependencies": {
